--- a/speedometer/src/app/speedo-meter/speedo-meter.component.html
+++ b/speedometer/src/app/speedo-meter/speedo-meter.component.html
@@ -17,26 +17,24 @@
     }
   }
 </style>
-<section class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12 col-sm-4 speedometerWrap">
-      <h1>Speedometer</h1>
-      <div class="speedometer">
-        <div class="speedometerReading" 
-          [style.transform]="'rotate(' + readingSpeed  + 'deg)'">
-        </div>
-        <div class="speedometerReadingBase"></div>
-        <div class="speedometerCentreCircle">
-          <span [style.transform]="'rotate(' + niddleSpeed  + 'deg)'"></span>
-        </div> 
-        <div class="speedometerBase"></div>   
-      </div>
-      <div class="meterRead">
-        <div class="meterValue">{{ speedScore }}</div>
-        <input type="number" min='0' max='100' [(ngModel)]='speedScore' class="form-control" (keyup)="getSpeed(speedScore)" (click)="getSpeed(speedScore)">
-        <br/>
-        <span class="range">(Min: 0 | Max: 100)</span>
-      </div>
+
+  
+<div class="speedometerWrap">
+  <h1>Speedometer</h1>
+  <div class="speedometer">
+    <div class="speedometerReading" 
+      [style.transform]="'rotate(' + readingSpeed  + 'deg)'">
     </div>
-    </div>
-</section>
+    <div class="speedometerReadingBase"></div>
+    <div class="speedometerCentreCircle">
+      <span [style.transform]="'rotate(' + niddleSpeed  + 'deg)'"></span>
+    </div> 
+    <div class="speedometerBase"></div>   
+  </div>
+  <div class="meterRead">
+    <div class="meterValue">{{ speedScore }}</div>
+    <input type="number" min='0' max='100' [(ngModel)]='speedScore' class="form-control" (keyup)="getSpeed(speedScore)" (click)="getSpeed(speedScore)">
+    <br/>
+    <span class="range">(Min: 0 | Max: 100)</span>
+  </div>    
+</div>
